# test_one

./: pyproject.toml
test_proj_one/scripts/: damn_proj.py
